# dlagon

./: .gitignore  CMakeLists.txt  Makefile  core  debug  main.cc  readme.md  todo.md  update.md
depen/: lexer.h  parser.h  read.h  term.h
dlagon/: CMakeLists.txt  test.cc
dlagon/common/: byte_buffer.h  log.cc  log.h  path.h  result.h
dlagon/dlagon/: CMakeLists.txt  a.cc
dlagon/dlagon/http/: factory.h  response.h
dlagon/dlagon/interface/: factory.h  handler.h  net_adapter.h  request.h  response.h  server.h
dlagon/error/: exception.h  panic.h
dlagon/http/: argument.cc  argument.h  body.cc  body.h  cookie.h  factory.h  head.cc  head.h  protocol.cc  protocol.h  protocol_factory.cc  protocol_factory.h  request.cc  request.h  response.cc  response.h  route.h  source.h
dlagon/http/midware/: static_file.cc  static_file.h
dlagon/http/midware/route/: basic_route.cc  basic_route.h  handler.h
dlagon/http/midware/static/: static_file.cc  static_file.h
dlagon/include/: dlagon.h
dlagon/include/common/: argument_table.h  debug.h  path.h
dlagon/include/exception/: exception.h
dlagon/include/http/: cookie.h  cookie_domain.h  header.h  http_client.h  http_request.h  http_response.h  http_server.h  method.h  mime_type.h  request.h  response_protocol.h  session.h
dlagon/include/net/common/: client_socket.h  end_point.h  server_socket.h  socket.h  tcp_socket.h  udp_socket.h
dlagon/include/net/tcp/: tcp_client_socket.h  tcp_server_socket.h  tcp_socket.h
dlagon/include/net/udp/: udp_socket.h
dlagon/include/server/: handler.h  route.h  server.h
dlagon/interface/: factory.h  handler.h  midware.cc  midware.h  net_adapter.h  request.h  response.h  route.h  server.cc  server.h
dlagon/interface/protocol/: argument.h  body.h  factory.h  head.h  request.h  response.h
dlagon/net/: end_point.cc  end_point.h  interface.h  socket.cc  socket.h
dlagon/net/tcp/: tcp_socket.cc  tcp_socket.h
dlagon/src/: dlagon.cc
dlagon/src/common/: argument_table.cc  path.cc
dlagon/src/exception/: exception.cc
dlagon/src/http/: cookie.cc  cookie_domain.cc  header.cc  hreader.cc  http_client.cc  http_request.cc  http_response.cc  http_server.cc  method.cc  mime_type.cc  request.cc  response_protocol.cc  session.cc
dlagon/src/net/common/: client_socket.cc  end_point.cc  scoket.cc  server_socket.cc
dlagon/src/net/tcp/: tcp_client_socket.cc  tcp_server_socket.cc  tcp_socket.cc
dlagon/src/server/: handler.cc  route.cc  server.cc
dlagon/web/: factory.h  id_pool.cc  id_pool.h  server.h  server_factory.cc  server_factory.h
doc/: struct.wsd
doc/http/: static_pool.md  struct.wsd
doc/server/: struct.md  uml.wsd
example/: CMakeLists.txt
example/basic/: basic  main.cc  readme.md
example/basic/static/: get.html  index.html
example/client_socket/: CMakeLists.txt  daytime_client.cc
example/cookie/: CMakeLists.txt  cookie.cc
example/function/: readme.md  tcp_server.cc
example/hello/: main.cc  midware.h  route.cc  route.h
example/http/: CMakeLists.txt  http.cc
example/json/: CMakeLists.txt  json.cc
example/login/: CMakeLists.txt  login.cc
example/route/: main.cc
example/server/: CMakeLists.txt  server.cc
example/server_socket/: CMakeLists.txt  daytime_server.cc
example/session/: CMakeLists.txt  session.cc
example/socket/: main.cc
example/socket/client/: daytime_client.cc
example/socket/http/: http_hello.cc
example/socket/server/: daytime_server.cc
example/static/: main.cc
example/todo/: login.cc  login.h  login.html  main.cc  readme.md
example/todo/static/: login.html
include/: client.h  defs.h  defs.h.old  dlagon.h  excption.h  handler.h  path.h  server.h
include/http/: arg.h  defs.h  request.h  response.h
include/socket/: client.h  server.h  socket.h
script/: build.sh
src/: http.cpp  main.cpp  server.cpp  socket.cc
src/http/: arg.cc  request.cc  response.cc
static/: 404.html  index.html  login.html
sub_project/: CMakeLists.txt
sub_project/frklin/webroot/: index.html
sub_project/frklin/webroot/js/: index.js
sub_project/oblisk/: CMakeLists.txt  readme.md
test/: CMakeLists.txt  main.cc  main.cpp
test/dlagon/common/: status.cc
test/dlagon/http/: argument.cc  head.cc  request.cc
test/http/: argument_table.cc  equal.cc  request.cc
test/socket/: socket.cc
tests/: CMakeLists.txt
tests/http/: cookie.cc  cookie_domain.cc  request_arg.cc
tools/: build.sh
